# movieclub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.json  conftest.py  gunicorn.conf.py  manage.py  package-lock.json  package.json  podman-kube.yml  pyproject.toml  requirements-ci.txt  requirements.txt  tailwind.config.js
.github/workflows/: main.yml
movieclub/: asgi.py  client.py  decorators.py  defaulttags.py  middleware.py  pagination.py  settings.py  template.py  templatetags.py  tmdb.py  urls.py  views.py  wsgi.py
movieclub/activitypub/: admin.py  apps.py  http_signature.py  models.py  signals.py  signature.py  urls.py  views.py
movieclub/activitypub/migrations/: 0001_initial.py  0002_follow_delete_following_and_more.py  0002_remove_follow_activitypub_follow_unique_follow_local_and_more.py  0002_remove_instance_local_alter_actor_actor_type.py  0003_remove_actor_activitypub_actor_unique_local_user_and_more.py  0003_remove_follow_activity_object_id_and_more.py  0004_rename_activitypub_object_id_follow_object_id_and_more.py  0005_follow_status_changed_at_alter_follow_status.py
movieclub/activitypub/tests/: factories.py  fixtures.py  test_http_signature.py  test_models.py  test_signals.py  test_signature.py  test_views.py
movieclub/blogathons/: apps.py  forms.py  models.py  urls.py  views.py
movieclub/blogathons/migrations/: 0001_initial.py  0002_alter_proposal_participant_alter_proposal_proposal.py  0002_rename_submitted_blogathon_published_and_more.py  0003_rename_state_changed_at_proposal_status_changed_at.py  0003_rename_state_proposal_status.py  0004_alter_entry_blog_title_alter_entry_blog_url.py
movieclub/blogathons/tests/: factories.py  fixtures.py  test_forms.py  test_models.py  test_views.py
movieclub/collections/: apps.py  forms.py  models.py  urls.py  views.py
movieclub/collections/migrations/: 0001_initial.py  0002_remove_collection_releases_and_more.py
movieclub/collections/templatetags/: collections.py
movieclub/collections/tests/: factories.py  test_models.py  test_views.py
movieclub/credits/: admin.py  apps.py  models.py  urls.py  views.py
movieclub/credits/migrations/: 0001_initial.py  0002_crewmember.py  0002_person_search_vector.py  0003_alter_castmember_person_alter_crewmember_person.py  0003_person_search_trigger.py  0004_castmember_search_vector_crewmember_search_vector.py  0005_cast_member_search_trigger.py  0006_crew_member_search_trigger.py
movieclub/credits/tests/: factories.py  test_models.py  test_views.py
movieclub/movies/: admin.py  apps.py  forms.py  jobs.py  models.py  tmdb.py  urls.py  views.py
movieclub/movies/migrations/: 0001_initial.py  0002_initial.py  0002_movie_search.py  0002_remove_review_activity_object_id_and_more.py  0002_review.py  0003_alter_castmember_person_alter_crewmember_person.py  0003_alter_review_comment.py  0003_movie_search_vector_alter_movie_genres.py  0003_remove_review_movies_review_unique_local_object_id_and_more.py  0003_tmdb_genres.py  0004_alter_castmember_person_alter_crewmember_person_and_more.py  0004_movie_search.py  0004_review_modified_alter_review_created.py  0004_tmdb_genres.py  0005_rename_backdrop_movie_backdrop_url_and_more.py  0005_review_actor.py
movieclub/movies/tests/: factories.py  mocks.py  test_jobs.py  test_models.py  test_tmdb.py  test_views.py
movieclub/people/: admin.py  apps.py  models.py  urls.py  views.py
movieclub/people/migrations/: 0001_initial.py  0002_alter_person_name.py  0003_rename_profile_person_profile_url.py
movieclub/people/tests/: factories.py  test_models.py  test_views.py
movieclub/releases/: admin.py  apps.py  models.py  tmdb.py  urls.py  views.py
movieclub/releases/migrations/: 0001_initial.py  0002_release_releases_release_unique_tmdb_id_category.py  0002_release_search_trigger.py  0003_release_search_trigger.py
movieclub/releases/templatetags/: releases.py
movieclub/releases/tests/: factories.py  test_models.py  test_templatetags.py  test_tmdb.py  test_views.py
movieclub/reviews/: apps.py  forms.py  models.py  urls.py  views.py
movieclub/reviews/migrations/: 0001_initial.py  0002_alter_review_score.py  0002_review_in_reply_to.py  0003_rename_in_reply_to_review_parent.py
movieclub/reviews/templatetags/: reviews.py
movieclub/tests/: fixtures.py  test_decorators.py  test_defaulttags.py  test_htmx.py  test_middleware.py  test_template.py  test_templatetags.py  test_tmdb.py  test_views.py
movieclub/tmdb/: api.py  models.py  populate.py
movieclub/tmdb/tests/: test_api.py  (+2 more)
movieclub/tv_shows/: apps.py  models.py
movieclub/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
static/css/: app.css
static/js/: app.js
templates/: _breadcrumbs.html  _cover_image.html  _navbar.html  _search_form.html  _signup_cta.html  default_base.html  hx_base.html  index.html
templates/account/: email.html  login.html  password_change.html  signup.html  signup_closed.html
templates/blogathons/: _proposal.html  _proposal_response_form.html  blogathon_form.html  blogathon_user_list.html  detail.html  entry.html  entry_form.html  index.html  proposal.html  proposal_form.html  proposal_response_form.html  proposals.html
templates/collections/: _dropdown.html  _dropdown_input.html  detail.html  form.html  index.html  user_list.html
templates/credits/: cast_member.html  cast_members.html  crew_member.html  crew_members.html
templates/movies/: _search_tmdb.html  add_movie.html  genre.html  index.html  movie.html
templates/people/: cast_member.html  cast_members.html  crew_member.html  crew_members.html
templates/releases/: _release.html  genre.html  index.html  movie.html  movies.html  release.html  search_tmdb.html  search_tmdb_movies.html  search_tmdb_tv_shows.html  tv_shows.html
templates/reviews/: _review.html  _review_form.html  _reviews.html  detail.html  release_list.html  review_form.html  user_list.html
templates/users/: detail.html  user_form.html
(+18 files in other folders)
