[tool.poetry]
name = "movieclub"
version = "0.1.0"
description = "ActivityPub-powered movie reviews"
authors = ["Dan Jacob <danjac2018@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tmdbv3api = "^1.9.0"
django = "^5.0.1"
nltk = "^3.8.1"
python-decouple = "^3.8"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-mock = "^3.12.0"
pytest-mypy = "^0.10.3"
mypy = "^1.8.0"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"
pytest-env = "^1.1.3"
ruff = "^0.2.0"
djlint = "^1.34.1"
django-browser-reload = "^1.12.1"
django-debug-toolbar = "^4.3.0"
pytest-xdist = "^3.5.0"
faker = "^22.6.0"
bandit = {extras = ["toml"], version = "^1.7.7"}
coverage = {extras = ["toml"], version = "^7.4.1"}
django-fastdev = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
