[tool.poetry]
name = "movieclub"
version = "0.1.0"
description = "ActivityPub-powered movie reviews"
authors = ["Dan Jacob <danjac2018@gmail.com>"]
license = "ACSL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
nltk = "^3.8.1"
httpx = "^0.26.0"
django-allauth = "^0.60.1"
django-extensions = "^3.2.3"
django-health-check = "^3.18.1"
django-htmx = "^1.17.2"
django-template-partials = "^23.4"
sentry-sdk = "^1.40.0"
whitenoise = "^6.6.0"
django-redis = "^5.4.0"
redis = "^5.0.1"
django-permissions-policy = "^4.19.0"
gunicorn = "^21.2.0"
hiredis = "^2.3.2"
pillow = "^10.2.0"
brotli = "^1.1.0"
django-anymail = "^10.2"
dj-database-url = "^2.1.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
heroicons = {extras = ["django"], version = "^2.6.0"}
psutil = "^5.9.8"
django-environ = "^0.11.2"
django-countries = "^7.5.1"
arrow = "^1.3.0"
setuptools = "^69.0.3"
django-widget-tweaks = "^1.5.0"
pycryptodome = "^3.20.0"
django-model-utils = "^4.3.1"
django-rq = "^2.10.1"
django-invitations = "^2.1.0"
attrs = "^23.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
pytest = "7.4.4"
pytest-django = "^4.8.0"
pytest-mock = "^3.12.0"
pytest-mypy = "^0.10.3"
mypy = "^1.8.0"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"
pytest-env = "^1.1.3"
ruff = "^0.2.0"
djlint = "^1.34.1"
django-browser-reload = "^1.12.1"
django-debug-toolbar = "^4.3.0"
pytest-xdist = "^3.5.0"
faker = "^22.6.0"
bandit = {extras = ["toml"], version = "^1.7.7"}
coverage = {extras = ["toml"], version = "^7.4.1"}
django-fastdev = "^1.8.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.4"
pytest-httpx = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="movieclub.settings"
addopts = [
    "-v",
    "-x",
    "-p no:warnings",
    "--ff",
    "--mypy",
    "--cov",
    "--reuse-db",
    "--no-cov-on-fail",
    "--cov-fail-under=100",
    "--cov-report=term-missing",
    "--tb=short",
]
testpaths = "movieclub"
env = [
    "TEMPLATE_DEBUG=true",
    "USE_COLLECTSTATIC=false",
    "USE_FASTDEV=true",
    "USE_HTTPS=false",
]

[tool.coverage.run]
source=["movieclub", "templates"]
omit=[
    "**/migrations/*",
    "*/nltk/*",
    "*/static/*",
    "*/tests/*",
    "*/asgi.py",
    "*/settings.py",
    "*/wsgi.py",
]


[tool.mypy]
python_version = "3.12"
check_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
warn_unreachable = true

[[tool.mypy.overrides]]
module="*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module="*.migrations.*"
ignore_errors = true

[tool.djlint]
profile = "django"
ignore = "H030,H031,H017,H021"

[tool.ruff]
target-version = "py312"

lint.select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "D10", # flake8-debugger
    "DJ", # flake8-django
    "E", # pycodestyle (error)
    "ERA", # eradicate
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FBT", # flake8-boolean-trap
    "G", # flake8-logging-format
    "I001", # isort
    "INP", # flake8-no-pep420
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PGH", # pygrep hooks
    "PIE", # flake8-pie
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff-specific
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "W", # pycodestyle (warning)
]
lint.ignore = [
    "D100",
    "D104",
    "D106",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "E501",
    "E701",
    "Q000",
    "S101",
]
[tool.ruff.lint.per-file-ignores]
# ignore pydocstyle rules for tests and migrations
"**/conftest.py" = ["D101", "D102", "D103", "D105", "RUF"]
"**/apps.py" = ["D101", "D102", "D103", "D105", "RUF"]
"**/migrations/**.py" = ["D101", "D102", "D103", "D105", "E501", "N", "RUF"]
"**/tests/**.py" = ["D101", "D102", "D103", "D105", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["movieclub"]

[tool.pyright]
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
